# md2moodle

./: .gitignore  .isort.cfg  README.md  export.py  pyproject.toml  requirements.txt  rules.json  scratch.py  setup.cfg
compiling/: compiler.py  processor.py
constructs/: action.py  construct_builder.py  elements.py
conversion/: convert.py  course_export.py
md2moodle/: __main__.py  debug.py  export.py  replace_md_links.py
md2moodle/compiling/: compiler.py  processor.py
md2moodle/constructs/: __init__.py  action.py  construct_builder.py  elements.py
md2moodle/conversion/: convert.py  course_export.py
md2moodle/parsing/: __init__.py  parser.py  scanner.py  tokens.py
md2moodle/rule_reader/: file_reader.py
parsing/: construct_builder.py  constructs.py  parser.py  scanner.py  tokens.py
rule_reader/: file_reader.py
scripts/spoiler-conversion/: action.py  constructs.py  generator.py  parser.py  process_spoilers.py  rules.json  scan.py  scanner.py  scratch.py  test.py  tokens.py
spoiler-conversion/: main.py  process_spoilers.py
testing/: 002-landing page.md  002-landing page_result.md  003-Updating the board.md  003-Updating the board_result.md  scratch.py  test.py  test_main.py
testing/export/: 003-Updating the board.md
testing/test_course/: 002-References of arrays.md  01.md
testing/test_course/nest/nest/: 002-landing page.md
tests/: 002-References of arrays_result.md  002-landing page_result.md  nested.md  test.py  test_main.py  test_md2moodle.py
tests/export/: 002-References of arrays.md  01.md
tools/: json_loader.py
(+1 files in other folders)
