[metadata]
name = md2moodle
version = 0.1.0

[options]
packages = md2moodle

[isort]
multi_line_output             = 3
profile                       = black
import_heading_stdlib         = Standard library imports
import_heading_thirdparty     = Third party imports
import_heading_firstparty     = md2moodle imports

[mypy]
ignore_missing_imports = True